--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   </head>
   <body>
     <div class="container">
-      <h1 id="main_header"></h1>
+      <h1 id="main_header">
+        <div style="border: 1px solid purple; padding: 10px">
+        <span style="color:red">Scripts are not enabled in your browser!</span>
+        <div><img src="horoscopehd-820x514.jpg"/></div>
+        </div>
+      </h1>
       <div class="row">
         <div class="col" id="p-0"></div>
         <div class="col" id="p-1"></div>
@@ -29,10 +34,4 @@
     </div>
   </body>
   <script src="helpers.js" language="javascript"></script>
-  <noscript>
-      <div style="border: 1px solid purple; padding: 10px">
-        <span style="color:red">JavaScript is not enabled!</span>
-        <div><img src="horoscopehd-820x514.jpg"/></div>
-      </div>
-  </noscript>
 </html>
