--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <div class="container">
       <h1 id="main_header">
-        <div style="border: 1px solid purple; padding: 10px">
+        <h2 style="border: 1px solid purple; padding: 10px">
         <span style="color:red">Scripts are not enabled in your browser!</span>
         <div><img src="horoscopehd-820x514.jpg"/></div>
-        </div>
+        </h2>
       </h1>
       <div class="row">
         <div class="col" id="p-0"></div>
