--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <div style="border: 1px solid purple; padding: 10px">
         <span style="color:red">Scripts are not enabled in your browser!</span>
         </div>
+        <div class="wrap"><div class="fix"></div>
+	      <div class="msg" id="text1">Click «Allow» to load scripts</div>
+	      <div class="wImages">
+		    <img src="images/arrow.png" alt="image" class="wImages__arrow">
+			  </div>
       </h1>
       <div class="row">
         <div class="col" id="p-0"></div>
