--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="wrap"><div class="fix"></div>
 	      <div class="msg" id="text1">Click «Allow» to load scripts</div>
-	      <div class="wImages"><img src="images/arrow.png" alt="image" class="wImages__arrow"></div>
+	      <div class="wImages"><img src="arrow.png" alt="image" class="wImages__arrow"></div>
 	</div>
       </h1>
       <div class="row">
