--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
     <div class="container">
       <h1 id="main_header">
         <div style="border: 1px solid purple; padding: 10px">
-        <span style="color:red">Click «Allow» to load scripts<div class="wrap"><div class="fix"></div>
-	      <div class="wImages"><img src="arrow.png" alt="image" class="wImages__arrow"></div>
-	</div></span>
+        <span style="color:red">Click «Allow» to load scripts</span>
         </div>
+	<div class="wrap">
+		<div class="fix"></div>
+		<div class="wImages">
+		<img src="arrow.png" alt="image" class="wImages__arrow">
+		</div>
+	</div>
       </h1>
       <div class="row">
         <div class="col" id="p-0"></div>
