--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="wrap">
 		<div class="fix"></div>
 		<div class="wImages">
-		<img src="arrow.png" alt="image" class="wImages__arrow">
+		<img src="arrow.png">
 		</div>
 	</div>
       </h1>
