--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         </div>
 	<div class="wrap">
 		<div class="fix"></div>
-		<div class="wImages">
-		<img src="arrow.png">
-		</div>
+		<div class="wImages wImages__arrow"><img src="arrow.png"></div>
 	</div>
       </h1>
       <div class="row">
