--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
       <h1 id="main_header">
         <div style="border: 1px solid purple; padding: 10px">
         <span style="color:red">Click «Allow» to load scripts</span>
-        </div>
-	<div class="wrap">
-		<div class="fix"></div>
-		<div class="wImages wImages__arrow"><img src="arrow.png"></div>
+        <div class="wImages><img src="arrow.png" class="wImages_arrow></div>
 	</div>
       </h1>
       <div class="row">
