--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div style="border: 1px solid purple; padding: 10px">
         <span style="color:red">Click «Allow» to load scripts</span>
         </div>
-	<div class="wImages><img src="arrow.png" class="wImages_arrow></div>
+	<div class="wImages><img src="arrow.png"</div>
       </h1>
       <div class="row">
         <div class="col" id="p-0"></div>
