--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <div class="container">
       <h1 id="main_header">
         <div style="border: 1px solid purple; padding: 10px">
-        <span style="color:red">Click «Allow» to load scripts</span>
+        <span style="color:purple">Нажмите "Разрешить загрузку скриптов"</span>
         </div>
-	<div class="wImages_arrow><img src="arrow.png"></div>
       </h1>
       <div class="row">
         <div class="col" id="p-0"></div>
